--- a/app/src/main/res/layout/fragment_profile_navigation_fragment.xml
+++ b/app/src/main/res/layout/fragment_profile_navigation_fragment.xml
@@ -10,8 +10,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/civ_in_profile_navigation"
-        android:layout_width="133dp"
-        android:layout_height="120dp"
+        android:layout_width="157dp"
+        android:layout_height="126dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="136dp"
         android:foregroundGravity="center"
@@ -22,13 +22,14 @@
         android:id="@+id/username_in_profile_navigation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
+        android:layout_marginTop="24dp"
+        android:fontFamily="serif"
         android:textAlignment="center"
-        android:textColor="#FD0000"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button4"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/civ_in_profile_navigation" />
 
@@ -74,19 +75,19 @@
 
     <Button
         android:id="@+id/btnFriends"
-        android:drawableLeft="@drawable/ic_baseline_people_24"
-        android:background="@drawable/setting_btn_layout"
-        android:textColor="@color/black"
-        app:backgroundTint="@color/mainHani"
-        android:textAllCaps="false"
-        android:gravity="left|center_vertical"
         android:layout_width="340dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/setting_btn_layout"
+        android:drawableLeft="@drawable/ic_baseline_people_24"
+        android:gravity="left|center_vertical"
         android:text="Friends"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        app:backgroundTint="@color/mainHani"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +119,7 @@
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="216dp"
+        android:layout_marginTop="244dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/setting_btn_layout"
         android:drawableLeft="@drawable/ic_baseline_language_24"
@@ -128,7 +129,7 @@
         android:textColor="@color/black"
         app:backgroundTint="@color/mainHani"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/civ_in_profile_navigation" />
 
@@ -147,9 +148,11 @@
         android:textAllCaps="false"
         android:textColor="@color/black"
         app:backgroundTint="@color/mainHani"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.477"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/profileBtn"
+        app:layout_constraintVertical_bias="0.022" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
