--- a/app/src/main/res/layout/findfriend.xml
+++ b/app/src/main/res/layout/findfriend.xml
@@ -6,21 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".FindfriendActivity">
 
-
-
     <ImageButton
         android:id="@+id/SearchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="20dp"
         android:layout_toRightOf="@id/textInputLayout"
         android:src="@drawable/ic_search_black" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         android:layout_marginTop="12dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
@@ -30,17 +27,17 @@
             android:id="@+id/SearchText"
             android:layout_width="300dp"
             android:layout_height="50dp"
-            android:inputType="textPersonName"
-           />
+            android:fontFamily="serif"
+            android:inputType="textPersonName" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/FriendView"
         android:layout_width="match_parent"
-        android:layout_height="378dp"
-        android:layout_marginTop="6dp"
+        android:layout_height="700dp"
         android:layout_below="@id/textInputLayout"
+        android:layout_marginTop="6dp"
 
         />
 
