--- a/app/src/main/res/layout/newnewtest.xml
+++ b/app/src/main/res/layout/newnewtest.xml
@@ -3,48 +3,59 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginRight="10dp"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/ic_calendar" />
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
     <Button
         android:id="@+id/createEventB"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_below="@id/imageView4"
-        android:layout_marginRight="10dp"
         android:layout_alignParentRight="true"
-        android:text="@string/createButton" />
+        android:layout_marginTop="150dp"
+        android:layout_marginRight="10dp"
+        android:backgroundTint="#2B5B85"
+        android:fontFamily="serif"
+        android:shadowColor="#F44336"
+        android:text="@string/createButton"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textStyle="bold|italic"
+        app:cornerRadius="20dp"
+        app:iconTint="#AF2626"
+        app:rippleColor="#FF0606" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="371dp"
+        android:background="@drawable/eveee"
         android:orientation="vertical">
 
         <EditText
             android:id="@+id/nameOFEvent"
-            android:layout_width="112dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="153dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:hint="Event name"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            app:boxBackgroundColor="#DEE8F4" />
 
         <EditText
             android:id="@+id/addressToLatLong"
-            android:layout_width="109dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="155dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:hint="Address"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            app:boxBackgroundColor="#DEE8F4" />
 
         <Spinner
             android:id="@+id/eventTypeSpinner"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:background="@drawable/style_spinner"
@@ -61,9 +72,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
+                android:fontFamily="serif"
                 android:text="@string/capacity"
                 android:textColor="#0B0000"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:textStyle="bold|italic" />
 
 
             <Spinner
@@ -73,27 +86,28 @@
                 android:layout_marginStart="12dp"
                 android:background="@drawable/style_spinner"
                 android:entries="@array/capacity" />
-
-
         </TableRow>
 
         <EditText
             android:id="@+id/CreateDescription"
-            android:layout_width="190dp"
-            android:layout_height="102dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="230dp"
+            android:layout_height="96dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="3dp"
-
+            android:fontFamily="serif"
             android:hint="@string/description_box"
             android:inputType="textCapSentences|textMultiLine"
             android:maxLength="1500"
             android:minLines="4"
             android:padding="10dp"
             android:scrollbars="vertical"
-            android:textSize="18sp"
+            android:textColor="#000000"
 
-            />
+            android:textSize="18sp"
+            android:textStyle="bold|italic"
+            app:boxBackgroundColor="#DEE8F4" />
 
         <TableRow
             android:layout_width="match_parent"
@@ -110,6 +124,7 @@
                 android:layout_height="42dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="5dp"
+                android:textColor="@color/white"
                 android:text="Due to corona, events created will be automotaically deleted after 00:00 every day"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2">
 
@@ -121,5 +136,12 @@
 
 
     </LinearLayout>
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginRight="10dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_calendar" />
 
 </RelativeLayout>
