--- a/app/src/main/res/layout/groupchat_item_left.xml
+++ b/app/src/main/res/layout/groupchat_item_left.xml
@@ -7,18 +7,18 @@
 
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/civ_in_chat"
+        android:id="@+id/group_sender_pic"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@mipmap/ic_launcher"/>
 
     <TextView
         android:textColor="@color/black"
-        android:id="@+id/chat_message"
+        android:id="@+id/group_chat_message"
         android:maxWidth="250dp"
         android:textSize="20sp"
         android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@id/civ_in_chat"
+        android:layout_toRightOf="@id/group_sender_pic"
         android:padding="8dp"
         android:text=""
         android:background="@drawable/chat_background_left"
@@ -26,20 +26,20 @@
         android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/seen"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:id="@+id/from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:layout_below="@id/chat_message"
-        />
+        android:layout_below="@id/group_chat_message"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/time_text"
+        android:id="@+id/group_time_text"
         android:layout_marginTop="14dp"
         android:text="Time"
-        android:layout_toRightOf="@id/chat_message"
+        android:layout_toRightOf="@id/group_chat_message"
         android:textAlignment="textEnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
