--- a/app/src/main/res/layout/newnewtest.xml
+++ b/app/src/main/res/layout/newnewtest.xml
@@ -30,7 +30,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="371dp"
-        android:background="@drawable/eveee"
+        android:background="@drawable/eveee25"
         android:orientation="vertical">
 
         <EditText
@@ -104,7 +104,6 @@
             android:padding="10dp"
             android:scrollbars="vertical"
             android:textColor="#000000"
-
             android:textSize="18sp"
             android:textStyle="bold|italic"
             app:boxBackgroundColor="#DEE8F4" />
