--- a/app/src/main/res/layout/view_eventmarker.xml
+++ b/app/src/main/res/layout/view_eventmarker.xml
@@ -31,7 +31,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="371dp"
-        android:background="@drawable/eveee"
+        android:background="@drawable/eveee25"
         android:baselineAligned="false"
         android:clickable="false"
         android:filterTouchesWhenObscured="false"
