add logout functions and more more more more layout and delete dark mode and language

--- a/app/src/main/res/drawable/style_spinner.xml
+++ b/app/src/main/res/drawable/style_spinner.xml
@@ -14,7 +14,7 @@
             <item>
                 <bitmap
 
-                    android:gravity="center|end" android:src="@drawable/arr3"/>
+                    android:gravity="center|end" android:src="@drawable/ic_down"/>
             </item>
         </layer-list>
     </item>
