--- a/app/src/main/res/layout/fragment_friends_messages.xml
+++ b/app/src/main/res/layout/fragment_friends_messages.xml
@@ -10,6 +10,6 @@
 
         android:id="@+id/friends_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="700dp" />
 
 </RelativeLayout>
