--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -22,7 +22,7 @@
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/messageViewPager"
             android:layout_width="match_parent"
-            android:layout_height="537dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="0dp"
             android:orientation="vertical" />
