--- a/app/src/main/res/layout/activity_person_profile.xml
+++ b/app/src/main/res/layout/activity_person_profile.xml
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="hey there i like byciles "
+            android:text=""
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="@android:color/background_dark"
