--- a/app/src/main/res/layout/fragment_profile_navigation_fragment.xml
+++ b/app/src/main/res/layout/fragment_profile_navigation_fragment.xml
@@ -51,7 +51,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/searchFrinds" />
 
 
     <Button
@@ -75,7 +75,8 @@
         app:layout_constraintTop_toTopOf="@+id/civ_in_profile_navigation" />
 
     <Button
-        android:id="@+id/button3"
+
+        android:id="@+id/searchFrinds"
         android:layout_width="340dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
@@ -85,7 +86,7 @@
         android:background="@drawable/setting_btn_layout"
         android:drawableLeft="@drawable/ic_logout"
         android:gravity="left|center_vertical"
-        android:text="Log out"
+        android:text="Search Friends"
         android:textAllCaps="false"
         android:textColor="@color/black"
         app:backgroundTint="@color/mainHani"
@@ -96,7 +97,7 @@
 
 
     <Button
-        android:id="@+id/searchFrinds"
+        android:id="@+id/button3"
         android:layout_width="340dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
@@ -106,7 +107,7 @@
         android:background="@drawable/setting_btn_layout"
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:gravity="left|center_vertical"
-        android:text="Search Friends"
+        android:text="Log out"
         android:textAllCaps="false"
         android:textColor="@color/black"
         app:backgroundTint="@color/mainHani"
