--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,22 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/home">
-
-    <fragment
-        android:id="@+id/home"
-        android:name="com.example.androidproject.TitleFragment"
-        android:label="TitleFragment" />
+    app:startDestination="@id/mapsFragment">
 
     <fragment
         android:id="@+id/messages"
         android:name="com.example.androidproject.Chat.MessagesFragment"
         android:label="fragment_messages"
         tools:layout="@layout/fragment_messages" />
-    <fragment
-        android:id="@+id/notifications"
-        android:name="com.example.androidproject.Notifications.NotificationFragment"
-        android:label="NotificationFragment"/>
 
     <fragment
         android:id="@+id/userProfile"
